--- a/index.html
+++ b/index.html
@@ -7,92 +7,35 @@
 	<title>Subhash Kumar-Web doveloper</title>
 </head>
 <body>
-     <div class="head">
-     	<nav>
-     	     <img src="C:\Users\om\Desktop\CSS\portfoliyo\image\image.png" class="logo">
-	     	<ul>
-	    		    <li><a href="#">Home</a></li>
-	    		    <li><a href="#">About Us</a></li>
-	    		    <li><a href="#">Portfolio</a></li>
-	    		    <li><a href="#">Hire Me</a></li>
-	    	     </ul>
-	    	</nav>    	
-          <div class="detail">
-          	<h1>Hi. I,m Subhash <span>Kumar</span></h1>
-          	<p>This is my official portfolio website to showes all<br>
-          	    Detailsand work experience web dovelopment
-          	</p> 
-          <a href="#">DOWNLOAD CV</a>
-          </div>
-          <div class="images">
-               <img src="C:\Users\om\Desktop\CSS\portfoliyo\image\shape.jpg" class="shape" width="50%" height="200%">
-               <img src="C:\Users\om\Desktop\CSS\portfoliyo\image\sub.jpg" class="self"> 
-          </div>
-     </div>  
-     <div class="news text-center" id="work">
-      <div class="container">
-        <div class="h3">My works</div>
-        <p class="subheading">
-          Proin ac fermentum est. Cras mi ipsum, consectetur.
-        </p>
-        <div class="row1">
-          <div class="row1-col1">
-            <div class="row1-col1-img">
-              <img src="https://demo.w3layouts.com/demos_new/template_demo/26-11-2018/exclusive-demo_Free/1097778733/web/images/g1.jpg" alt="news image" class="img-fluid">
-              <div class="news">
-                <h4>Lorem ipsum</h4>
-                <p class="subnews">Nulla pellentesque mi non</p>
-              </div>
-            </div>
-          </div>
-          <div class="row1-col2">
-            <div class="row1-col2-img">
-              <img src="https://demo.w3layouts.com/demos_new/template_demo/26-11-2018/exclusive-demo_Free/1097778733/web/images/g2.jpg" alt="news image" class="img-fluid">
-              <div class="news">
-                <h4>Dolor sit</h4>
-                <p class="subnews">Nulla pellentesque mi non</p>
-              </div>
-            </div>
-          </div>
-          <div class="row1-col3">
-            <div class="row1-col3-img">
-              <img src="https://demo.w3layouts.com/demos_new/template_demo/26-11-2018/exclusive-demo_Free/1097778733/web/images/g3.jpg" alt="news image" class="img-fluid">
-              <div class="news">
-                <h4>Adipisicing</h4>
-                <p class="subnews">Nulla pellentesque mi non</p>
-              </div>
-            </div>
-          </div>
+     <div class="nav">
+          <div class="logo">Subhash</div>
+          <div class="navspace">Home</div>
+     	<div class="navspace">About Us</div>
+     	<div class="navspace">My Work</div>
+     	<div class="navspace">Contact</div>
+	</div> 
 
-          <div class="row2-col1">
-            <div class="row2-col1-img">
-              <img src="https://demo.w3layouts.com/demos_new/template_demo/26-11-2018/exclusive-demo_Free/1097778733/web/images/g4.jpg" alt="news image" class="img-fluid">
-              <div class="news">
-                <h4>Eius eum</h4>
-                <p class="subnews">Nulla pellentesque mi non</p>
-              </div>
+	<div class="container">
+		<div class="left">
+			<div class="img">
+	 		   <img src="C:\Users\om\Desktop\CSS\portfoliyo\image\sub.jpg">
+	 	     </div>
+		</div>
+		<div class="right">
+			<h1>Hi. I,m Subhash <span>Kumar</span></h1>
+          	<p>This is my official portfolio website to showes all<br>
+          	    Details and work experience web dovelopment
+          	</p> 
+          <button>Learn about what i do</button>
+		</div>
+	</div>
+      <div class="mid-container" id="work">
+        <div class="h3">My works</div>
+        <div class="subheading">
+          Proin ac fermentum est. Cras mi ipsum, consectetur.</div>
+            <div class="image">
             </div>
-          </div>
-          <div class="row2-col2">
-            <div class="row2-col2-img">
-              <img src="https://demo.w3layouts.com/demos_new/template_demo/26-11-2018/exclusive-demo_Free/1097778733/web/images/g5.jpg" alt="news image" class="img-fluid">
-              <div class="news">
-                <h4>Consectetur</h4>
-                <p class="subnews">Nulla pellentesque mi non</p>
-              </div>
-            </div>
-          </div>
-          <div class="row2-col3">
-            <div class="row2-col3-img">
-              <img src="https://demo.w3layouts.com/demos_new/template_demo/26-11-2018/exclusive-demo_Free/1097778733/web/images/g6.jpg" alt="news image" class="img-fluid">
-              <div class="news">
-                <h4>Pellentesque</h4>
-                <p class="subnews">Nulla pellentesque mi non</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>   	  
+     
+    </div>  	  
 </body>
 </html>
