--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="text">
                <div class="h1">
-                  Eius eum
+                  Lorem ipsum
                   <div class="p"> Nulla pellentesque mi non
                   </div>
                </div>
@@ -200,15 +200,19 @@
             <div class="description">If you appreciate my work, please get Contact with me at the information given below.</div>
             <div class="contact1">
                <div class="bold_address">Address<span style="font-weight: 400;"> :Jaipur,
-                  Rajasthan<br/> Pin Code:-303712, INDIA.</span>
-               </div>
+                  Rajasthan<br></span></div>
+               <div class="bold_address">Pin Code<span style="font-weight: 400;"> :303712, INDIA.</span></div> 
                <div class="bold_address">Phone<span style="font-weight: 400;">  :8386894301</span></div>
                <div class="bold_address">Email<span style="font-weight: 400;"> :kumawatsubhash767@gmail.com</span></div>
+               <div class="icon"></div>
             </div>
              </div>
+
                <div class="map">
                	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227748.38256111907!2d75.65046915686081!3d26.885447918626703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4adf4c57e281%3A0xce1c63a0cf22e09!2sJaipur%2C%20Rajasthan!5e0!3m2!1sen!2sin!4v1667144245262!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                </div> 
+
+
             
                                       
          <div class="footer" id="footer">
